<resources>
    <string name="app_name">Badasalud</string>
    <string name="badasaludImagen" translatable="false">Badasalud.com</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">BadaSalud</string>
    <string name="nav_header_subtitle" translatable="false">info@badasalud.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="Otras_Opciones">Otras Opciones</string>
    <string name="introduce_tu_email">introduce tu email</string>
    <string name="introduce_tu_password">introduce tu password</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="tel_fono">Teléfono</string>
    <string name="email_tx" translatable="false">Email</string>
    <string name="password_tx" translatable="false">Password</string>
    <string name="entrar_tx">Entrar</string>
    <string name="registrarse">Registrarse</string>
    <string name="logueate_si_ya_teines_una_cuenta">Logueate si ya teines una cuenta</string>
    <string name="introduce_tu_string_nombre">introduce tu @string/nombre</string>
    <string name="introduce_tu_string_apellidos">introduce tu @string/apellidos</string>
    <string name="introduce_tu_telefono">introduce tu telefono</string>
    <string name="title_activity_login" translatable="false">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password (optional)</string>
    <string name="action_sign_in" translatable="false">Sign in or register</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="error_invalid_email" translatable="false">This email address is invalid</string>
    <string name="error_invalid_password" translatable="false">This password is too short</string>
    <string name="error_incorrect_password" translatable="false">This password is incorrect</string>
    <string name="error_field_required" translatable="false">This field is required</string>
    <string name="permission_rationale" translatable="false">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_dasadsfdasf" translatable="false">dasadsfdasf</string>
    <string name="nombre_hospital">Nombre Hospital</string>
    <string name="direccionhospital">Direccion Hospital</string>
    <string name="tel_fono_hospital">Teléfono Hospital</string>
    <string name="_8942" translatable="false">⋮</string>
    <string name="actualizar_datos">Actualizar Datos:</string>
    <string name="actualizar">Actualizar</string>
    <string name="t_tulo_de_la_cita">Título de la Cita</string>
    <string name="fecha">Fecha</string>
    <string name="hora">Hora</string>
    <string name="crear_cita">Crear Cita</string>
    <string name="nombre_hint">NOMBRE</string>
    <string name="email" translatable="false">Email</string>
    <string name="asunto">Asunto</string>
    <string name="asunto_hint">ASUNTO</string>
    <string name="mensaje">Mensaje</string>
    <string name="enviar_mensaje">Enviar Mensaje</string>
    <string name="mensaje_hint">MENSAJE</string>
    <string name="titulo_cita">Titulo Cita</string>
    <string name="hospital" translatable="false">Hospital</string>
    <string name="especialidad">Especialidad</string>
    <string name="reg_strate">Regístrate</string>
    <string name="password" translatable="false">Password</string>
    <string name="con_ctate">CONÉCTATE</string>
    <string name="registrate_por_email">Registrate por email</string>
    <string name="entrar">Entrar</string>
    <string name="bienvenido">Bienvenido/a</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="nombre_del_usuario">nombre del usuario</string>
    <string name="nombreusuario">Nombre:</string>
    <string name="apellidosusuario">Apellidos:</string>
    <string name="apellidos_del_usuario">apellidos del usuario</string>
</resources>
