<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/listado_vista"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/borde_titulo"
    android:orientation="vertical"
    android:paddingBottom="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp">

    <ImageView
        android:id="@+id/imagenCita"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="31dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/todo"
        android:cropToPadding="true"
        android:src="@drawable/iconcita" />

    <TextView
        android:id="@+id/tituloCita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/imagenCita"
        android:text="@string/titulo_cita"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/hospitalCita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/especialidadCita"
        android:layout_alignStart="@+id/tituloCita"
        android:text="@string/hospital"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/especialidadCita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/fechaCita"
        android:layout_alignStart="@+id/tituloCita"
        android:layout_marginBottom="-84dp"
        android:text="@string/especialidad"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/fechaCita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/tituloCita"
        android:layout_marginTop="84dp"
        android:text="@string/fecha"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/horaCita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imagenCita"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="80dp"
        android:text="@string/hora"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textSize="16sp" />

</RelativeLayout>
