<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2"
    tools:context=".fragmentos.InicioFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:id="@+id/linear_inicial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/borde"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_bienvenido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bienvenido"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="start">

            <TextView
                android:id="@+id/txt_usuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/nombreusuario"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ver_nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/nombre_del_usuario"
                android:textColor="#000"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="start">

            <TextView
                android:id="@+id/txt_apellidos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/apellidosusuario"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ver_apellidos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/apellidos_del_usuario"
                android:textColor="#000"
                android:textSize="25sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/principal_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            android:src="@drawable/iconofinal" />

        <TextView
            android:id="@+id/ver_telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="invisible" />
    </LinearLayout>

</FrameLayout>