<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".fragmentos.PanelUsuarioFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/actualizar_datos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/actualizar_datos"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_nombre_act"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:background="@android:color/background_light"
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="text"
            android:padding="15dp"
            android:textColorHint="?attr/colorButtonNormal" />

        <EditText
            android:id="@+id/et_apellidos_act"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:background="@android:color/background_light"
            android:ems="10"
            android:hint="@string/apellidos"
            android:inputType="text"
            android:padding="15dp"
            android:textColorHint="?attr/colorButtonNormal" />

        <EditText
            android:id="@+id/et_telefono_act"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@android:color/background_light"
            android:ems="10"
            android:hint="@string/tel_fono"
            android:inputType="phone"
            android:padding="15dp"
            android:textColorHint="?attr/colorButtonNormal" />

        <Button
            android:id="@+id/boton_actualizar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="@color/colorPrimaryDark"
            android:singleLine="true"
            android:text="@string/actualizar"
            android:textColor="@android:color/background_light"
            android:textStyle="bold" />

    </LinearLayout>


</FrameLayout>