<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:foregroundGravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegistroActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/logoRegistro"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/iconofinal" />

            <TextView
                android:id="@+id/tv_registrate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-smallcaps"
                android:gravity="center"
                android:text="@string/reg_strate"
                android:textColor="@android:color/background_light"
                android:textSize="30sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:background="@android:color/background_light"
                    android:ems="10"
                    android:hint="@string/nombre"
                    android:inputType="text"
                    android:padding="15dp"
                    android:textColorHint="?attr/colorButtonNormal" />

                <EditText
                    android:id="@+id/et_apellidos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:background="@android:color/background_light"
                    android:ems="10"
                    android:hint="@string/apellidos"
                    android:inputType="text"
                    android:padding="15dp"
                    android:textColorHint="?attr/colorButtonNormal" />

                <EditText
                    android:id="@+id/et_telefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:background="@android:color/background_light"
                    android:ems="10"
                    android:hint="@string/tel_fono"
                    android:inputType="phone"
                    android:padding="15dp"
                    android:textColorHint="?attr/colorButtonNormal" />

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:background="@android:color/background_light"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="15dp"
                    android:textColorHint="?attr/colorButtonNormal" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:background="@android:color/background_light"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textWebPassword"
                    android:padding="15dp"
                    android:textColorHint="?attr/colorButtonNormal" />


                <Button
                    android:id="@+id/boton_registro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:background="@color/colorPrimaryDark"
                    android:singleLine="true"
                    android:text="@string/registrarse"
                    android:textColor="@android:color/background_light"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="Ya estas registrado? Logueate"
                    android:textColor="#fff"
                    android:textSize="17dp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>
