<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".fragmentos.DesignCitaFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/ly_anadir_citas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/borde_titulo"
            android:orientation="vertical">

            <EditText
                android:id="@+id/titulo_cita"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/borde_titulo"
                android:ems="10"
                android:hint="@string/t_tulo_de_la_cita"
                android:inputType="text"
                android:padding="15dp"
                android:textColorHint="?attr/colorButtonNormal" />

            <Spinner
                android:id="@+id/spinner_hospitales"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/borde"
                android:entries="@array/hospitales" />

            <Spinner
                android:id="@+id/spinner_especialidades"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/borde"
                android:entries="@array/especialidades" />

            <TextView
                android:id="@+id/fechaText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="@string/fecha"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/fechaLayout"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/fechayear" />

                <Spinner
                    android:id="@+id/mes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/fechames" />

                <Spinner
                    android:id="@+id/dia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/fechadia" />

            </LinearLayout>

            <TextView
                android:id="@+id/horaText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="@string/hora"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:orientation="horizontal">


                <Spinner
                    android:id="@+id/hora"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:entries="@array/hora" />

                <Spinner
                    android:id="@+id/minutos"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/minutos" />

            </LinearLayout>

            <Button
                android:id="@+id/boton_cita"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark"
                android:singleLine="true"
                android:text="@string/crear_cita"
                android:textColor="@android:color/background_light"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>

</FrameLayout>